--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,12 @@
     "node": true,
     "browser": true
   },
-  "extends": ["eslint:recommended", "eslint-config-prettier", "plugin:prettier/recommended"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:import/recommended",
+    "eslint-config-prettier",
+    "plugin:prettier/recommended"
+  ],
   "plugins": [
     "prettier"
   ],
@@ -17,6 +22,23 @@
   },
   "rules": {
     "prettier/prettier": "warn",
-    "comma-dangle": ["warn", "always-multiline"]
+    "comma-dangle": ["warn", "always-multiline"],
+    "import/order": [
+      "warn",
+      {
+        "groups": ["builtin", "external", "internal", [ "parent", "sibling"], "index", "object", "type"],
+        "pathGroups": [
+          {
+            "pattern": "@/**",
+            "group": "internal"
+          }
+        ],
+        "alphabetize": {
+          "order": "asc",
+          "caseInsensitive": true
+        },
+        "newlines-between": "always"
+      }
+    ]
   }
 }
