--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,8 @@
   ],
   "parser": "@babel/eslint-parser",
   "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module",
     "requireConfigFile": false,
     "babelOptions": {
       "configFile": "./.babelrc"
